[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_db_engine"
version = "1.0.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A lightweight educational storage engine with mmap, WAL, and a custom B+ Tree index."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine.py"]